--- a/app/src/main/res/layout/activity_my_pets.xml
+++ b/app/src/main/res/layout/activity_my_pets.xml
@@ -1,204 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/my_pets_hsclv"
-    tools:context="com.ahmedbass.mypetfriend.MyPetsActivity">
+    android:orientation="vertical">
 
-     <!--Dummy Static List, to be modified later -->
-
-    <LinearLayout
-        android:id="@+id/my_pets_container_lout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp">
-
-        <LinearLayout
-            android:id="@+id/single_pet_lout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:background="@drawable/mypets_list_background"
-            android:layout_margin="15dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Name"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/colorPrimaryDark"/>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:src="@drawable/dog_img"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:layout_margin="5dp"
-                android:background="?android:attr/selectableItemBackground"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Age"
-                android:textColor="@color/primaryTextWhite"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Breed and Kind"
-                android:textColor="@color/primaryTextWhite"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet weight"
-                android:textColor="@color/primaryTextWhite"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:background="@drawable/mypets_list_background"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Name"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/colorPrimaryDark"/>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:src="@drawable/pic"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:layout_margin="5dp"
-                android:background="?android:attr/selectableItemBackground"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Age"
-                android:textColor="@color/primaryTextWhite"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Breed and Kind"
-                android:textColor="@color/primaryTextWhite"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet weight"
-                android:textColor="@color/primaryTextWhite"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:background="@drawable/mypets_list_background"
-            android:layout_margin="15dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Name"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/colorPrimaryDark"/>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:src="@drawable/dog_img"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:layout_margin="5dp"
-                android:background="?android:attr/selectableItemBackground"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Age"
-                android:textColor="@color/primaryTextWhite"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Breed and Kind"
-                android:textColor="@color/primaryTextWhite"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet weight"
-                android:textColor="@color/primaryTextWhite"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:background="@drawable/mypets_list_background"
-            android:layout_margin="15dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Name"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/colorPrimaryDark"/>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:src="@drawable/dog_img"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:layout_margin="5dp"
-                android:background="?android:attr/selectableItemBackground"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Age"
-                android:textColor="@color/primaryTextWhite"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet Breed and Kind"
-                android:textColor="@color/primaryTextWhite"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="My Pet weight"
-                android:textColor="@color/primaryTextWhite"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-</HorizontalScrollView>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/myPets_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1"/>
+</LinearLayout>
