--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,34 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:rowCount="3"
-    android:columnCount="2"
     android:padding="16dp"
-    android:layout_gravity="center_vertical|center_horizontal"
-    tools:context="com.ahmedbass.mypetfriend.MainActivity">
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_rowWeight=".5"
-        android:layout_columnSpan="2"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_gravity="center"/>
+    android:layout_gravity="center"
+    android:gravity="center"
+    tools:context="com.ahmedbass.mypetfriend.MainActivity"
+    android:baselineAligned="false">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_row="1"
-        android:layout_column="0"
         android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_weight="1">
         <ImageButton
             android:id="@+id/my_pets_btn"
             style="@style/iconStyle_MainScreen"
@@ -53,14 +40,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_weight="1"
+        android:orientation="vertical">
         <ImageButton
             android:id="@+id/pet_places_btn"
             style="@style/iconStyle_MainScreen"
@@ -85,14 +68,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_row="2"
-        android:layout_column="0"
-        android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_weight="1"
+        android:orientation="vertical">
         <ImageButton
             android:id="@+id/petServices_btn"
             style="@style/iconStyle_MainScreen"
@@ -117,14 +96,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_weight="1"
+        android:orientation="vertical">
         <ImageButton
             android:id="@+id/pet_shop_btn"
             style="@style/iconStyle_MainScreen"
@@ -147,4 +122,4 @@
             android:layout_gravity="center|bottom" />
     </LinearLayout>
 
-</GridLayout>
+</LinearLayout>
