--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -70,15 +70,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="center">
+            android:layout_marginTop="12dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Birth Date:"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp"/>
+                android:layout_weight="1"/>
             <Spinner
                 android:id="@+id/monthPick_spr"
                 android:layout_width="wrap_content"
@@ -99,8 +97,8 @@
                 android:inputType="number"
                 android:hint="Day"
                 android:gravity="center"
-                android:ems="2"
-                android:selectAllOnFocus="true" />
+                android:selectAllOnFocus="true"
+                android:layout_weight="1"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,7 +114,7 @@
                 android:hint="Year"
                 android:gravity="center"
                 android:selectAllOnFocus="true"
-                android:ems="3" />
+                android:layout_weight="1"/>
         </LinearLayout>
 
         <LinearLayout
