--- a/app/src/main/res/layout/pet_profile.xml
+++ b/app/src/main/res/layout/pet_profile.xml
@@ -1,100 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:paddingBottom="5dp"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".PetProfileActivity">
 
-    <FrameLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:id="@+id/pet_image"
-            android:src="@drawable/dog_img"
-            android:background="@android:color/darker_gray"
-            android:scaleType="centerCrop"
-            android:contentDescription="Pet profile picture" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true">
 
-        <LinearLayout
-            android:id="@+id/petInfo_lout"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:gravity="start"
-            android:padding="2dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:background="#99000000"
-            android:orientation="vertical">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="64dp"
+            app:title="My Pet Name">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:id="@+id/pet_gender_txtv"
-                android:text="Pet Gender"
-                android:textColor="@color/primaryTextWhite"
-                android:fontFamily="cursive"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:id="@+id/pet_breed_txtv"
-                android:text="Pet Breed"
-                android:textColor="@color/primaryTextWhite"
-                android:fontFamily="cursive"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:id="@+id/pet_birthdate_txtv"
-                android:text="Pet Birthday"
-                android:textColor="@color/primaryTextWhite"
-                android:fontFamily="cursive"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:id="@+id/pet_weight_txtv"
-                android:text="Pet Weight"
-                android:textColor="@color/primaryTextWhite"
-                android:fontFamily="cursive"/>
-            </LinearLayout>
-    </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <com.ahmedbass.mypetfriend.ThreeFourImageView
+                    android:id="@+id/toolbarImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    android:src="@drawable/pic"
+                    app:layout_collapseMode="parallax"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/smooth_background_protection"/>
+            </FrameLayout>
+
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin"/>
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_fab"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:fabSize="auto"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:src="@drawable/camera"
+        app:layout_anchor="@id/appBar"
+        app:layout_anchorGravity="bottom|end"
+        android:clickable="true"/>
 
     <LinearLayout
-        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp">
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Schedule"
-            android:id="@+id/button"
-            android:layout_weight="1"
-            android:textColor="@color/primaryTextWhite"/>
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <Button
-            android:layout_width="0dp"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/sliding_tabs"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Vaccines"
-            android:id="@+id/button2"
-            android:layout_weight="1"
-            android:textColor="@android:color/background_light"/>
+            app:tabMode="fixed"
+            app:tabGravity="fill"
+            app:tabSelectedTextColor="#FFFFFF"
+            app:tabTextColor="#0000FF"
+            android:background="@color/colorAccent"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@android:color/darker_gray"
-        android:layout_above="@id/linearlayout"
-        android:id="@+id/imageView" />
+</android.support.design.widget.CoordinatorLayout>
 
-</RelativeLayout>
+
+    <!--<FrameLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_below="@id/toolbar">-->
+        <!---->
+        <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/smooth_background_protection"/>-->
+
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="bottom|center"-->
+            <!--android:id="@+id/pet_gender_txtv"-->
+            <!--android:text="Pet Gender - Breed Type - Age - weight"-->
+            <!--android:textColor="@color/primaryTextWhite"-->
+            <!--android:padding="5dp"-->
+            <!--android:textSize="20dp"/>-->
+    <!--</FrameLayout>-->
+
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="bottom|center"-->
+            <!--android:id="@+id/pet_gender_txtv"-->
+            <!--android:text="Pet Gender - Breed Type - Age - weight"-->
+            <!--android:textColor="@color/primaryTextWhite"-->
+            <!--android:padding="5dp"-->
+            <!--android:textAppearance="?android:attr/textAppearanceLarge"/>-->
+
+
+    <!--<LinearLayout-->
+        <!--android:id="@+id/linearlayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_marginStart="5dp"-->
+        <!--android:layout_marginEnd="5dp"-->
+        <!--android:layout_gravity="bottom">-->
+        <!--<Button-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Schedule"-->
+            <!--android:id="@+id/button"-->
+            <!--android:layout_weight="1"-->
+            <!--android:textColor="@color/primaryTextWhite"/>-->
+
+        <!--<Button-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Vaccines"-->
+            <!--android:id="@+id/button2"-->
+            <!--android:layout_weight="1"-->
+            <!--android:textColor="@android:color/background_light"/>-->
+    <!--</LinearLayout>-->
+
+<!--</android.support.design.widget.CoordinatorLayout>-->
+
+
+<!--<ImageView-->
+<!--android:id="@+id/pet_picture_img"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:src="@drawable/dog_img"-->
+<!--android:background="@android:color/darker_gray"-->
+<!--android:scaleType="centerCrop"-->
+<!--android:contentDescription="Pet profile picture"-->
+<!--android:transitionName="pet_picture_img"/>-->
+
+
+<!--<LinearLayout-->
+<!--android:id="@+id/linearlayout"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:layout_alignParentBottom="true"-->
+<!--android:layout_marginStart="5dp"-->
+<!--android:layout_marginEnd="5dp"-->
+<!--android:layout_gravity="bottom">-->
+<!--<Button-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="Schedule"-->
+    <!--android:id="@+id/button"-->
+    <!--android:layout_weight="1"-->
+    <!--android:textColor="@color/primaryTextWhite"/>-->
+
+<!--<Button-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="Vaccines"-->
+    <!--android:id="@+id/button2"-->
+    <!--android:layout_weight="1"-->
+    <!--android:textColor="@android:color/background_light"/>-->
