--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#E64A19</color>
+    <color name="colorPrimary">#ff5722</color>
+    <color name="colorPrimaryDark">#e64a19</color>
     <color name="colorPrimaryLight">#FFCCBC</color>
+    <!--e77919 FFCCBC-->
 
-    <color name="colorAccent">#2196F3</color>
+    <color name="colorAccent">#2196f3</color>
     <color name="colorAccentDark">#1976D2</color>
     <color name="colorAccentLight">#BBDEFB</color>
 
@@ -15,14 +16,15 @@
     <color name="icon_bright">@color/nice_red</color>
     <color name="icon_dark">@color/colorAccent</color>
 
-    <color name="nice_blue">#2196F3</color>
+    <color name="nice_blue">#2196f3</color>
     <color name="nice_green">#4CAF50</color>
     <color name="nice_red">#D80027</color>
     <color name="nice_purple">#933EC5</color>
     <color name="nice_yellow">#FFDA44</color>
     <color name="nice_orange">#FF9800</color>
-    <color name="nice_blue_gray">#607D8B</color>
-    <color name="nice_dark_blue_gray">#455A64</color>
+    <color name="nice_blue_gray">#607d8b</color>
+    <color name="nice_dark_blue_gray">#455a64</color>
     <color name="nice_light_gray">#CFD8DC</color>
-    <color name="nice_dark_gray">#9E9E9E</color>
+    <color name="nice_gray">#9E9E9E</color>
+    <color name="nice_dark_gray">#444444</color>
 </resources>
