--- a/app/src/main/res/layout/activity_add_new_pet.xml
+++ b/app/src/main/res/layout/activity_add_new_pet.xml
@@ -4,23 +4,24 @@
     android:id="@+id/activity_add_new_pet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ahmedbass.mypetfriend.AddNewPetActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical">
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
             android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
             android:elevation="2dp">
             <ImageButton
                 android:id="@+id/uploadPhoto_btn"
@@ -40,203 +41,240 @@
                 android:textColor="@color/primaryTextWhite"/>
         </FrameLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pet Name:"/>
-        <EditText
-            android:id="@+id/petName_etxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Pet Name"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"/>
-        </LinearLayout>
 
-        <LinearLayout
+        <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:orientation="vertical"
+            android:rowCount="9"
+            android:columnCount="2"
+            android:layout_gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_gravity="center_vertical"
+                android:text="Name:"
+                android:layout_margin="5dp"/>
+            <EditText
+                android:id="@+id/petName_etxt"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:hint="e.g. Fluffy"
+                android:layout_gravity="fill"
+                android:inputType="textAutoComplete|textAutoCorrect|textCapWords"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_gravity="center_vertical"
                 android:text="Birth Date:"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp"/>
-            <Spinner
-                android:id="@+id/monthPick_spr"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:entries="@array/months"
-                android:layout_weight="1"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="/"
-                android:layout_marginStart="1dp"
-                android:layout_marginEnd="1dp"/>
+                android:layout_margin="5dp"/>
 
-            <EditText
-                android:id="@+id/dayPick_etxt"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="Day"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:selectAllOnFocus="true" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="/"
-                android:layout_marginStart="1dp"
-                android:layout_marginEnd="1dp"/>
+                android:layout_row="2"
+                android:layout_column="1"
+                android:layout_gravity="fill">
 
-            <EditText
-                android:id="@+id/yearPick_etxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="Year"
-                android:gravity="center"
-                android:selectAllOnFocus="true"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="center">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Gender:"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="1"/>
-
-            <RadioGroup
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="2">
-                <RadioButton
-                    android:layout_width="0dp"
+                <EditText
+                    android:id="@+id/dayPick_etxt"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Male"
+                    android:gravity="center"
+                    android:hint="Day"
+                    android:ems="2"
+                    android:inputType="number"
+                    android:selectAllOnFocus="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/"/>
+                <Spinner
+                    android:id="@+id/monthPick_spr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:entries="@array/months"
+                    style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                    tools:targetApi="lollipop" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/"/>
+                <EditText
+                    android:id="@+id/yearPick_etxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:hint="Year"
+                    android:ems="3"
+                    android:gravity="center"
+                    android:selectAllOnFocus="true" />
+            </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_row="3"
+                    android:layout_column="0"
+                    android:text="Gender:"
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center_vertical"/>
+
+                <RadioGroup
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_row="3"
+                    android:layout_column="1"
+                    android:orientation="horizontal"
+                    android:layout_margin="5dp"
+                    android:layout_gravity="fill"
+                    android:gravity="center">
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Male"
+                        android:layout_weight="1"/>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Female"
+                        android:layout_weight="1"/>
+                </RadioGroup>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_row="4"
+                    android:layout_column="0"
+                    android:layout_gravity="center_vertical"
+                    android:text="Type:"
+                    android:layout_margin="5dp"/>
+                <Spinner
+                    android:id="@+id/petType_spnr"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_row="4"
+                    android:layout_column="1"
+                    android:layout_gravity="fill"
+                    android:entries="@array/pet_types"
+                    style="@android:style/Widget.Material.Spinner.Underlined"
+                    tools:targetApi="lollipop" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_row="5"
+                    android:layout_column="0"
+                    android:layout_margin="5dp"
+                    android:text="Breed:" />
+                <AutoCompleteTextView
+                    android:id="@+id/petBreed_spnr"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_row="5"
+                    android:layout_column="1"
+                    android:layout_gravity="fill"
+                    android:inputType="textAutoComplete|textCapWords"
+                    android:selectAllOnFocus="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_row="6"
+                    android:layout_column="0"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="5dp"
+                    android:text="Weight:"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="6"
+                android:layout_column="1"
+                android:layout_gravity="fill">
+                <EditText
+                    android:id="@+id/petWeight_etxt"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:selectAllOnFocus="true"
+                    android:hint="Current weight"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginStart="2dp"
+                    android:text="kg"/>
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="7"
+                android:layout_column="0"
+                android:layout_margin="5dp"
+                android:layout_gravity="center_vertical"
+                android:text="Neutered:"/>
+            <RadioGroup
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_row="7"
+                android:layout_column="1"
+                android:layout_margin="5dp"
+                android:orientation="horizontal"
+                android:layout_gravity="fill">
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Yes"
                     android:layout_weight="1"/>
                 <RadioButton
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Female"
+                    android:text="No"
                     android:layout_weight="1"/>
             </RadioGroup>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Pet Type:"
-                android:layout_weight="1"/>
-            <Spinner
-                android:id="@+id/petType_spnr"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Pet Breed:"
-                android:layout_weight="1"/>
-            <AutoCompleteTextView
-                android:id="@+id/petBreed_spnr"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pet's Current Weight:"/>
+                android:layout_row="8"
+                android:layout_column="0"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:text="Microchip:"/>
             <EditText
-                android:id="@+id/petWeight_etxt"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:ems="4"
-                android:gravity="center"
+                android:layout_row="8"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:hint="Microchip number"
+                android:inputType="number"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="kg"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:weightSum="1">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Is Pet Neutered:"/>
-            <Switch
-                android:id="@+id/petNeutered_swch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="70dp"
-                android:layout_marginEnd="70dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:weightSum="1">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Is Pet Microchipped:"/>
-
-            <Switch
-                android:id="@+id/petMicrochip_swch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                android:layout_marginEnd="35dp"/>
-        </LinearLayout>
+                android:layout_marginLeft="10dp"/>
+        </GridLayout>
 
         <Button
             android:id="@+id/savePetProfile_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save &amp; Continue"
-            android:layout_margin="10dp"
+            android:text="Create"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:onClick="SavePetProfile"/>
     </LinearLayout>
 </ScrollView>
