--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -75,36 +75,34 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Birth Date:"
-                android:layout_weight="1"/>
-            <Spinner
-                android:id="@+id/monthPick_spr"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:entries="@array/months"
-                android:layout_weight="1"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="/"
-                android:layout_marginStart="1dp"
-                android:layout_marginEnd="1dp"/>
-
+                android:text="Birth Date: "/>
             <EditText
                 android:id="@+id/dayPick_etxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="Day"
+                android:ems="2"
                 android:gravity="center"
                 android:selectAllOnFocus="true"
                 android:layout_weight="1"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="/"
-                android:layout_marginStart="1dp"
-                android:layout_marginEnd="1dp"/>
+                android:text="/"/>
+
+            <Spinner
+                android:id="@+id/monthPick_spr"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:entries="@array/months"
+                android:layout_weight="1"
+                style="@android:style/Widget.Material.Spinner.Underlined"
+                tools:targetApi="lollipop" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/"/>
 
             <EditText
                 android:id="@+id/yearPick_etxt"
@@ -112,6 +110,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="Year"
+                android:ems="3"
                 android:gravity="center"
                 android:selectAllOnFocus="true"
                 android:layout_weight="1"/>
@@ -125,7 +124,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Gender:"
+                android:text="Gender: "
                 android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"/>
@@ -157,7 +156,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="User Type:"
+                android:text="User Type: "
                 android:id="@+id/usertype_txt"
                 android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp"
