--- a/app/src/main/res/layout/fragment_pet_info.xml
+++ b/app/src/main/res/layout/fragment_pet_info.xml
@@ -1,17 +1,12 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coordinatorLayout"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/timeline_listview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:paddingTop="5dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:drawSelectorOnTop="true">
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:drawSelectorOnTop="true">
-    </ListView>
-
-</LinearLayout>
+</ListView>
