--- a/app/src/main/res/layout/fragment_pet_info_header.xml
+++ b/app/src/main/res/layout/fragment_pet_info_header.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pet's Info"
-        style="@style/myTextViewStyle.myTitleStyle"
-        android:layout_gravity="start"
-        android:layout_marginTop="15dp"
+        android:layout_gravity="center_vertical"
+        android:background="@color/primaryTextWhite"
         android:layout_marginBottom="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"/>
+        android:elevation="2dp">
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/pet_info1"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="Pet's Info"
+            style="@style/myTextViewStyle.myTitleStyle"
+            android:padding="10dp"/>
+    </LinearLayout>
 
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:rowCount="8"
         android:columnCount="2"
         android:background="@android:color/white"
@@ -39,7 +51,8 @@
             android:layout_rowSpan="2"
             android:textColor="@color/primaryText"
             android:layout_gravity="fill"
-            android:gravity="fill_vertical" />
+            android:gravity="fill_vertical"
+            android:layout_columnWeight="1"/>
 
         <TextView
             android:layout_row="2"
@@ -97,91 +110,115 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Microchip #:"
+            android:text="Microchip:"
             android:textColor="@color/primaryText"
             android:layout_gravity="fill" />
 
         <TextView
+            android:id="@+id/birthdate_txtv"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_rowSpan="2"
-            android:text="12/jan/2016(15years, 11months)"
-            android:textColor="@color/nice_blue_gray"
+            android:text="12/jan/2016\n(15years, 11months)"
+            android:textColor="@color/primaryText"
             android:layout_gravity="fill"
-            android:gravity="fill_vertical" />
+            android:gravity="fill_vertical"
+            android:layout_columnWeight="1"/>
 
         <TextView
+            android:id="@+id/gender_txtv"
             android:layout_row="2"
             android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="Gender"
-            android:textColor="@color/nice_blue_gray"
+            android:textColor="@color/primaryText"
             android:layout_gravity="fill" />
 
         <TextView
+            android:id="@+id/type_txtv"
             android:layout_row="3"
             android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="Type"
-            android:textColor="@color/nice_blue_gray"
+            android:textColor="@color/primaryText"
             android:layout_gravity="fill" />
 
         <TextView
+            android:id="@+id/breed_txtv"
             android:layout_row="4"
             android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="Breed"
-            android:textColor="@color/nice_blue_gray"
+            android:textColor="@color/primaryText"
             android:layout_gravity="fill" />
 
         <TextView
+            android:id="@+id/weight_txtv"
             android:layout_row="5"
             android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="Current Weight"
-            android:textColor="@color/nice_blue_gray"
+            android:textColor="@color/primaryText"
             android:layout_gravity="fill" />
 
         <TextView
+            android:id="@+id/isNeutered_txtv"
             android:layout_row="6"
             android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="Neutered / Spayed"
-            android:textColor="@color/nice_blue_gray"
+            android:textColor="@color/primaryText"
             android:layout_gravity="fill" />
 
         <TextView
+            android:id="@+id/microchip_txtv"
             android:layout_row="7"
             android:layout_column="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="Microchip Number"
-            android:textColor="@color/nice_blue_gray"
+            android:textColor="@color/primaryText"
             android:layout_gravity="fill" />
     </GridLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pet's Timeline"
-        style="@style/myTextViewStyle.myTitleStyle"
-        android:layout_gravity="start"
+        android:layout_gravity="center_vertical"
+        android:background="@color/primaryTextWhite"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"/>
+        android:layout_marginBottom="5dp"
+        android:elevation="2dp">
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/timeline1"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="Pet's Timeline"
+            style="@style/myTextViewStyle.myTitleStyle"
+            android:padding="10dp"/>
+    </LinearLayout>
+
 </LinearLayout>
