--- a/app/src/main/res/layout/list_item_timeline.xml
+++ b/app/src/main/res/layout/list_item_timeline.xml
@@ -8,9 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="hello"
-        android:textSize="24dp"
-        android:padding="3dp"
-        android:layout_margin="3dp"
+        android:textSize="24sp"
+        android:padding="8dp"
         android:gravity="center"
         android:background="@color/primaryTextWhite"/>
 
