--- a/app/src/main/res/layout/pet_profile.xml
+++ b/app/src/main/res/layout/pet_profile.xml
@@ -29,20 +29,33 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <com.ahmedbass.mypetfriend.ThreeFourImageView
-                    android:id="@+id/toolbarImage"
+                <ViewSwitcher
+                    android:id="@+id/viewSwitcher"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:scaleType="centerCrop"
-                    android:fitsSystemWindows="true"
-                    android:src="@drawable/pic"
-                    app:layout_collapseMode="parallax"/>
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true">
+                    <com.ahmedbass.mypetfriend.ThreeFourImageView
+                        android:id="@+id/petProfilePic_img1"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:scaleType="centerCrop"
+                        android:fitsSystemWindows="true"
+                        android:src="@drawable/pic"
+                        app:layout_collapseMode="parallax"/>
+                    <com.ahmedbass.mypetfriend.ThreeFourImageView
+                        android:id="@+id/petProfilePic_img2"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:scaleType="centerCrop"
+                        android:fitsSystemWindows="true"
+                        android:src="@drawable/dog_img"
+                        app:layout_collapseMode="parallax"/>
+                </ViewSwitcher>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/smooth_background_protection"/>
             </FrameLayout>
-
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -58,9 +71,9 @@
         android:id="@+id/add_fab"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        app:fabSize="auto"
+        app:fabSize="normal"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:src="@drawable/camera"
+        android:src="@drawable/add"
         app:layout_anchor="@id/appBar"
         app:layout_anchorGravity="bottom|end"
         android:clickable="true"/>
@@ -79,7 +92,8 @@
             app:tabGravity="fill"
             app:tabSelectedTextColor="#FFFFFF"
             app:tabTextColor="#0000FF"
-            android:background="@color/colorAccent"/>
+            android:background="@color/colorAccent"
+            android:elevation="4dp"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
@@ -89,100 +103,3 @@
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
-
-
-    <!--<FrameLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="200dp"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_below="@id/toolbar">-->
-        <!---->
-        <!--<View-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@drawable/smooth_background_protection"/>-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom|center"-->
-            <!--android:id="@+id/pet_gender_txtv"-->
-            <!--android:text="Pet Gender - Breed Type - Age - weight"-->
-            <!--android:textColor="@color/primaryTextWhite"-->
-            <!--android:padding="5dp"-->
-            <!--android:textSize="20dp"/>-->
-    <!--</FrameLayout>-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom|center"-->
-            <!--android:id="@+id/pet_gender_txtv"-->
-            <!--android:text="Pet Gender - Breed Type - Age - weight"-->
-            <!--android:textColor="@color/primaryTextWhite"-->
-            <!--android:padding="5dp"-->
-            <!--android:textAppearance="?android:attr/textAppearanceLarge"/>-->
-
-
-    <!--<LinearLayout-->
-        <!--android:id="@+id/linearlayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_marginStart="5dp"-->
-        <!--android:layout_marginEnd="5dp"-->
-        <!--android:layout_gravity="bottom">-->
-        <!--<Button-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Schedule"-->
-            <!--android:id="@+id/button"-->
-            <!--android:layout_weight="1"-->
-            <!--android:textColor="@color/primaryTextWhite"/>-->
-
-        <!--<Button-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Vaccines"-->
-            <!--android:id="@+id/button2"-->
-            <!--android:layout_weight="1"-->
-            <!--android:textColor="@android:color/background_light"/>-->
-    <!--</LinearLayout>-->
-
-<!--</android.support.design.widget.CoordinatorLayout>-->
-
-
-<!--<ImageView-->
-<!--android:id="@+id/pet_picture_img"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:src="@drawable/dog_img"-->
-<!--android:background="@android:color/darker_gray"-->
-<!--android:scaleType="centerCrop"-->
-<!--android:contentDescription="Pet profile picture"-->
-<!--android:transitionName="pet_picture_img"/>-->
-
-
-<!--<LinearLayout-->
-<!--android:id="@+id/linearlayout"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:layout_alignParentBottom="true"-->
-<!--android:layout_marginStart="5dp"-->
-<!--android:layout_marginEnd="5dp"-->
-<!--android:layout_gravity="bottom">-->
-<!--<Button-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Schedule"-->
-    <!--android:id="@+id/button"-->
-    <!--android:layout_weight="1"-->
-    <!--android:textColor="@color/primaryTextWhite"/>-->
-
-<!--<Button-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Vaccines"-->
-    <!--android:id="@+id/button2"-->
-    <!--android:layout_weight="1"-->
-    <!--android:textColor="@android:color/background_light"/>-->
